(WIP) Generic policies: managing removed entries.
-> Some code to keep, some code to trash or rethink...

Implemente special status manager 'removed' to handle
removed entries.
Define rm_time criteria for removed entries.

Change-Id: I82ec8eeca6a93c8c2712850cb7d2c771a5f6d7db

--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -78,31 +78,21 @@ FS_Scan
 define_policy migration {
     scope { type == file and (status == new or status == modified) }
     status_manager = lhsm;
-    default_lru_sort_attr = last_mod;
     default_action = lhsm.archive;
-}
-
-migration_parameters
-{
-    nb_threads = 2;
-
-    max_action_count = 100;
-}
-
-migration_trigger
-{
-    trigger_on = scheduled;
-    check_interval = 1s;
+    default_lru_sort_attr = last_mod;
 }
 
 define_policy purge {
     scope { type == file and status == synchro }
     status_manager = lhsm;
-    default_lru_sort_attr = last_access;
     default_action = lhsm.release;
+    default_lru_sort_attr = last_access;
 }
 
-purge_parameters
-{
-    nb_threads = 2;
+define_policy hsm_remove {
+    status_manager = removed;
+    scope { type == file and status == removed }
+    default_action = lhsm.hsm_remove;
+    default_lru_sort_attr = rm_time;
 }
+
