Tests: All tests up to 211 OK for Lustre-HSM purpose.
Change-Id: I9fa2aa95777c1dc760e357374128c10170e31c57

--- a/tests/lustre_fs/cfg/test_rm1.conf
+++ b/tests/lustre_fs/cfg/test_rm1.conf
@@ -49,11 +49,9 @@ purge_trigger
 
 ##### basic HSM remove policy ######
 
-hsm_remove_policy
+hsm_remove_policies
 {
-    # enable HSM removal
-    hsm_remove = TRUE;
-
-    #remove files 1 week after they have been removed from Lustre
-    deferred_remove_delay = 30s;
+    rule default {
+        condition { rm_time >= 30 }
+    }
 }
