ListMgr: allow specifying the MySQL DB engine.
Replaced the 'innodb = on/off' parameter with
an 'engine = <enginename>' parameter (defaults to 'InnoDB').

Change-Id: I2b1b74d29cf8286e60b537189606e3ccb7712a86

--- a/doc/templates/hsm_policy_detailed.conf
+++ b/doc/templates/hsm_policy_detailed.conf
@@ -395,7 +395,7 @@ ListManager
 		# password or password_file are mandatory
 		password = "robinhood";
         #password_file = "/etc/robinhood.d/lhsm/.dbpassword" ;
-        # innodb = enabled;
+        # engine = InnoDB;
 	}
 #       user_acct = FALSE;
 #       group_acct = FALSE;
