--- a/doc/templates/hsmlite_detailed.conf
+++ b/doc/templates/hsmlite_detailed.conf
@@ -267,7 +267,7 @@ ListManager
 		# password or password_file are mandatory
 		password = "robinhood";
 		#password_file = "/etc/robinhood.d/backup/.dbpassword";
-        # innodb = enabled;
+        # engine = InnoDB;
 	}
 #       user_acct = FALSE;
 #       group_acct = FALSE;
