--- a/doc/templates/tmp_fs_mgr_detailed.conf
+++ b/doc/templates/tmp_fs_mgr_detailed.conf
@@ -77,7 +77,7 @@ ListManager
         user   = "robinhood" ;
         password = "robinhood";
 #        password_file = "/etc/robinhood.d/tmpfs/.dbpassword" ;
-        # innodb = enabled;
+        # engine = InnoDB;
     }
 
 #       user_acct = FALSE;
