--- a/tests/lustre_fs/cfg/OtherParameters_2.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_2.conf
@@ -37,7 +37,7 @@ ListManager
 		db = "robinhood_lustre";
         user = "robinhood";
 		password = "robinhood";
-        innodb = enabled;
+        engine = InnoDB;
 	}
 
 	SQLite {
