--- a/tests/lustre_fs/cfg/log_common.conf
+++ b/tests/lustre_fs/cfg/log_common.conf
@@ -34,7 +34,7 @@ ListManager
 		user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
-        innodb = enabled;
+        engine = InnoDB;
 	}
 
 	SQLite {
