--- a/tests/lustre_fs/cfg/OtherParameters_1.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_1.conf
@@ -55,7 +55,7 @@ ListManager
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
-        innodb = enabled;
+        engine = InnoDB;
 	}
 
 	SQLite {
