--- a/tests/lustre_fs/cfg/OtherParameters_4.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_4.conf
@@ -12,7 +12,7 @@ ListManager
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
-        innodb = enabled;
+        engine = InnoDB;
 	}
 }
 
