--- a/tests/lustre_fs/cfg/migr_fail.conf
+++ b/tests/lustre_fs/cfg/migr_fail.conf
@@ -48,7 +48,7 @@ ListManager
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
-        innodb = enabled;
+        engine = InnoDB;
 	}
 
 	SQLite {
