--- a/tests/lustre_fs/cfg/test_completion.conf
+++ b/tests/lustre_fs/cfg/test_completion.conf
@@ -51,7 +51,7 @@ ListManager
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
-        innodb = enabled;
+        engine = InnoDB;
 	}
 
 	SQLite {
