--- a/tests/lustre_fs/cfg/test_mnt_point.conf
+++ b/tests/lustre_fs/cfg/test_mnt_point.conf
@@ -53,7 +53,7 @@ ListManager
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
-        innodb = enabled;
+        engine = InnoDB;
 	}
 
 	SQLite {
