--- a/tests/posix_fs/cfg/OtherParameters_5.conf
+++ b/tests/posix_fs/cfg/OtherParameters_5.conf
@@ -33,7 +33,7 @@ ListManager
         user = "robinhood";
 		# password or password_file are mandatory
 		password = "robinhood";
-        innodb = enabled;
+        engine = InnoDB;
 	}
 }
 
