policies: properly manage "manage_deleted" flag.
Fix the following bug: all policies using a status manager
that could handle deleted entries was consisered as a policy
on deleted entries.
Policies on deleted entries are now specified as an argument
to the status manager (removed). For example:
	status_manager = lhsm(removed);
The policies with such an argument are considered as 'deletion policy'.

Change-Id: I417f6e5286a1f936dcbf6e67b0ce0bd4295483a1

--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -91,8 +91,7 @@ define_policy purge {
 
 define_policy hsm_remove {
     scope { type == file }
-    manage_removed = yes;
-    status_manager = lhsm;
+    status_manager = lhsm(removed);
     default_action = lhsm.hsm_remove;
     default_lru_sort_attr = rm_time;
 }
