--- a/tests/lustre_fs/cfg/test_trig.conf
+++ b/tests/lustre_fs/cfg/test_trig.conf
@@ -41,9 +41,5 @@ purge_trigger
     high_threshold_cnt = $high_cnt;
     low_threshold_cnt  = $low_cnt;
     check_interval     = 5min ;
-}
-
-purge_parameters
-{
-    post_purge_df_latency = 0;
+    post_trigger_wait = 0;
 }
