--- a/tests/lustre_fs/cfg/test_trig2.conf
+++ b/tests/lustre_fs/cfg/test_trig2.conf
@@ -41,9 +41,5 @@ purge_trigger
     high_threshold_vol = $ost_high_vol;
     low_threshold_vol  = $ost_low_vol;
     check_interval     = 5min ;
-}
-
-purge_parameters
-{
-    post_purge_df_latency = 10;
+    post_trigger_wait = 10;
 }
