--- a/tests/lustre_fs/cfg/test_trig3.conf
+++ b/tests/lustre_fs/cfg/test_trig3.conf
@@ -41,6 +41,7 @@ purge_trigger
     low_threshold_cnt  = 40;
     check_interval     = 5min ;
     notify = TRUE;
+    post_trigger_wait = 0;
 }
 
 purge_trigger
@@ -51,6 +52,7 @@ purge_trigger
     low_threshold_vol  = 80MB;
     check_interval     = 5min ;
     notify = TRUE;
+    post_trigger_wait = 0;
 }
 
 purge_trigger
@@ -71,10 +73,4 @@ purge_trigger
     low_threshold_cnt  = 40;
     check_interval     = 5min ;
     notify = TRUE;
-}
-
-
-purge_parameters
-{
-    post_purge_df_latency = 0;
 }
