--- a/tests/lustre_fs/cfg/test_trig4.conf
+++ b/tests/lustre_fs/cfg/test_trig4.conf
@@ -60,9 +60,5 @@ purge_trigger
 {
     trigger_on         = periodic;
     check_interval     = 10s;
-}
-
-purge_parameters
-{
-    post_purge_df_latency = 0;
+    post_trigger_wait = 0;
 }
