tests: apdat test framework to v3.
Change-Id: Id319fe863b385a8dc1f41a1e2384d69eebc2d2de

--- a/tests/lustre_fs/cfg/common.conf
+++ b/tests/lustre_fs/cfg/common.conf
@@ -63,11 +63,11 @@ ListManager
 }
 
 # for tests with backup purpose
-backend
+backup_config
 {
     root = "/tmp/backend";
-    mnt_type=ext4;
-    check_mounted = FALSE;
+    mnt_type = ext4;
+    check_mounted = no;
 }
 
 FS_Scan
@@ -77,21 +77,21 @@ FS_Scan
 
 define_policy migration {
     scope { type == file and (status == new or status == modified) }
-    status_manager = lhsm;
-    default_action = lhsm.archive;
+    status_manager = $STATUS_MGR;
+    default_action = $DEFAULT_ARCHIVE;
     default_lru_sort_attr = last_mod;
 }
 
 define_policy purge {
     scope { type == file and status == synchro }
-    status_manager = lhsm;
-    default_action = lhsm.release;
+    status_manager = $STATUS_MGR;
+    default_action = $DEFAULT_PURGE;
     default_lru_sort_attr = last_access;
 }
 
 define_policy hsm_remove {
     scope { type == file }
-    status_manager = lhsm(removed);
-    default_action = lhsm.hsm_remove;
+    status_manager = $STATUS_MGR(removed);
+    default_action = $DEFAULT_HSMRM;
     default_lru_sort_attr = rm_time;
 }
