--- a/tests/lustre_fs/cfg/test_updt.conf
+++ b/tests/lustre_fs/cfg/test_updt.conf
@@ -68,7 +68,7 @@ ListManager
 }
 
 # for tests with backup purpose
-backend
+backup_config
 {
     root = "/tmp/backend";
     mnt_type=ext4;
@@ -108,14 +108,15 @@ filesets
 
 define_policy migration {
     scope { type == file and (status == new or status == modified) }
-    status_manager = lhsm;
-    default_action = lhsm.archive;
+    status_manager = $STATUS_MGR;
+    default_action = $DEFAULT_ARCHIVE;
     default_lru_sort_attr = last_mod;
 }
+
 define_policy purge {
     scope { type == file and status == synchro }
-    status_manager = lhsm;
-    default_action = lhsm.release;
+    status_manager = $STATUS_MGR;
+    default_action = $DEFAULT_PURGE;
     default_lru_sort_attr = last_access;
 }
 
