policies: only get policy status if an entry matches the policy scope.
Only call get_status or changelog callback
if an entry potentially matches the policy scope.

Also fixes:
Wrong initializations of attribute struct.
Most tests up to 216.

Change-Id: I87d40919c9ad9b79f9a9aa930ea6867dd3f82c04

--- a/tests/lustre_fs/cfg/test_mnt_point.conf
+++ b/tests/lustre_fs/cfg/test_mnt_point.conf
@@ -75,7 +75,14 @@ FS_Scan
     Ignore { path == "/mnt/lustre/.lustre" }
 }
 
-Migration_Policies
+define_policy migration {
+    scope { type == file and (status == new or status == modified) }
+    status_manager = $STATUS_MGR;
+    default_action = $DEFAULT_ARCHIVE;
+    default_lru_sort_attr = last_mod;
+}
+
+migration_policies
 {
     policy default { condition { last_access > 1s } }
 }
