Various test fixes
* listmgr: fix wrong handling of stripe info criteria
* tests: change policy application parameters to v3 style.
* more details in some log messages.

Change-Id: I81dd3be31ae5ae3ac707ea39d2e25a20695cb47b

--- a/tests/lustre_fs/cfg/OtherParameters_5.conf
+++ b/tests/lustre_fs/cfg/OtherParameters_5.conf
@@ -78,7 +78,7 @@ FS_Scan
 purge_trigger
 {
     trigger_on = global_usage;
-    high_watermark_pct = 100%;
-    low_watermark_pct = 99%;
+    high_threshold_pct = 100%;
+    low_threshold_pct = 99%;
     check_interval = 5sec;
 }
