--- a/tests/lustre_fs/cfg/PurgeClass_LastAccess.conf
+++ b/tests/lustre_fs/cfg/PurgeClass_LastAccess.conf
@@ -18,7 +18,7 @@ purge_rules
         target_fileclass = test_lastAccess;
         condition
         {
-            last_access < 1min
+            last_access < 20s
         }
     }
 
