--- a/tests/lustre_fs/cfg/PurgeClass_LastModification.conf
+++ b/tests/lustre_fs/cfg/PurgeClass_LastModification.conf
@@ -18,7 +18,7 @@ purge_rules
         target_fileclass = test_lastModif;
         condition
         {
-            last_mod < 1min
+            last_mod < 20s
         }
     }
 
