--- a/tests/lustre_fs/cfg/TriggerPurge_QuotaExceeded.conf
+++ b/tests/lustre_fs/cfg/TriggerPurge_QuotaExceeded.conf
@@ -3,8 +3,8 @@
 purge_trigger
 {
     trigger_on = global_usage;
-    high_watermark_pct = 75%;
-    low_watermark_pct = 74.5%;
+    high_threshold_pct = 75%;
+    low_threshold_pct = 74.5%;
     check_interval = 5min;
 }
 
