--- a/tests/lustre_fs/cfg/TriggerPurge_UserQuotaExceeded.conf
+++ b/tests/lustre_fs/cfg/TriggerPurge_UserQuotaExceeded.conf
@@ -3,8 +3,8 @@
 Purge_Trigger
 {
     trigger_on = user_usage(root);
-    high_watermark_pct = 25%;
-    low_watermark_pct = 15%;
+    high_threshold_pct = 25%;
+    low_threshold_pct = 15%;
     check_interval = 5min;
 }
 
