--- a/tests/lustre_fs/cfg/TriggerPurge_OstQuotaExceeded.conf
+++ b/tests/lustre_fs/cfg/TriggerPurge_OstQuotaExceeded.conf
@@ -3,8 +3,8 @@
 Purge_Trigger
 {
     trigger_on = OST_usage;
-    high_watermark_pct = 75%;
-    low_watermark_pct = 65%;
+    high_threshold_pct = 75%;
+    low_threshold_pct = 65%;
     check_interval = 5min;
 }
 
