Implement policies as dynamic modules
Build specialised modules as shared libraries that robinhood can
dynamically load, and that can possibly be re-distributed separately.

Each module exposes its name, as a constant ASCII string, a status manager
and an action factory. Actions are retrieved by name, and are expressed as
<module_name>.<action> (like "lhsm.archive", or "common.copy").

The libraries are named librbh_mod_<name>.so and are installed in
$libdir/robinhood.

Change-Id: I8e001077c2a329ab07834b89fd1cfa169dfa16c5

--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -14,7 +14,7 @@ endif
 
 libcommontools_la_SOURCES= RW_Lock.c uidgidcache.c rbh_misc.c \
                            global_config.c update_params.c queue.c \
-                           rbh_logs.c \
+                           rbh_logs.c rbh_modules.c \
                            $(FS_SRC) $(PURPOSE_SRC) $(COMPAT_SRC)
 
 indent:
