--- a/src/tools/Makefile.am
+++ b/src/tools/Makefile.am
@@ -28,7 +28,8 @@ set_lovea_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 read_lovea_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
 
 gen_lov_objid_DEPENDENCIES=$(all_libs)
-gen_lov_objid_CFLAGS=$(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+gen_lov_objid_CFLAGS=-static $(AM_CFLAGS) $(FS_CFLAGS) $(MISC_FLAGS)
+gen_lov_objid_LDFLAGS=-static
 gen_lov_objid_LDADD=$(all_libs) $(DB_LDFLAGS) $(FS_LDFLAGS) $(PURPOSE_LDFLAGS)
 
 ost_fids_remap_DEPENDENCIES=$(all_libs)
