configure should not return non-zero on success
When Shook is not built, the last test (test -d "/ccc") would return
1, which is also what configure would return. Just print whether Shook
is supported or not.

Change-Id: Id2b4cbd83b17393a9d8b209131c45fdd84928a53

--- a/configure.ac
+++ b/configure.ac
@@ -408,3 +408,5 @@ AC_MSG_NOTICE([Lustre     support is $build_lustre])
 AC_MSG_NOTICE([Backup     support is $build_backup])
 AC_MSG_NOTICE([Lustre/HSM support is $build_lhsm])
 test -d "/ccc" && AC_MSG_NOTICE([Shook      support is $build_shook])
+
+exit 0
