Start fixing build for POSIX and Lustre 1.8.
Policy run still needs to be ported to rbh v3.0.

Change-Id: I06b143e6363436bbfe4a9da2e59fba11414d4f88

--- a/configure.ac
+++ b/configure.ac
@@ -122,7 +122,12 @@ if test "x$support_lustre" = "xyes" ; then
             AC_DEFINE(_MDT_SPECIFIC_LOVEA, 1, [MDT LOV EA is no longer the same as lov_user_md])
         fi
 
-        AC_CHECK_HEADER([lustre/lustre_idl.h], have_lustre_idl="true", have_lustre_idl="false")
+        AC_CHECK_HEADER([lustre/lustre_idl.h], have_lustre_idl="true", have_lustre_idl="false", [
+            #define LPX64 "%#llx"
+            #include <sys/types.h>
+            #include <asm/types.h>
+            #include <lustre/lustre_user.h>
+        ])
         if test "$have_lustre_idl" = "true"; then
             AC_DEFINE(_LUSTRE_IDL_HEADER, 1, [lustre_idl header exists])
         fi
