Replace *_hints parameters by *_action_params.
Replaced hints string parameters by action_params parameter blocks.
Such a block consists of arbitrary key/values.

For now, action parameters can be defined in policy rules or fileclasses.
It is still needed to implement them at the policy level and in triggers.

Parameter values can include placeholders such as '{attr}' where attr
stands for a entry attribute or global parameters (like fsname, fsroot, ...).

A placeholder can also refer to another constant parameter:
E.g.
    x = 1
    foo = "{x}"    -> foo = 1
However, with multiple levels of dependencies, the result is indetermined
(depends on evaluation order):
E.g.
    a = 3
    x = "{a}"      -> x = "3"
    foo = "{x}"    -> foo = "{a}" OR foo = "3" (depending on evaluation order).

New parameter matching to allow using JSON strings in values (or other
braces-based format).
E.g. in a parameter like:
     json = '{"id":"{fid}","src_pool":"{ost_pool}"}';
{fid} and {ost_pool} will be replaced.

Reorganized fileset parsing by the way.

Change-Id: I20ee52f9c2a83be728f9269ddee1105cfa490f1e

--- a/doc/templates_v3/template.conf
+++ b/doc/templates_v3/template.conf
@@ -24,7 +24,7 @@ Filesets {
 
         FileClass odd_files {
             definition { type == file and name == "*[13579]" }
-            lhsm_archive_hints="archive_id=1";
+            lhsm_archive_action_params { archive_id = 1; }
             report = no;
         }
 
@@ -52,20 +52,20 @@ lhsm_archive_rules {
 
     rule archive_small {
         target_fileclass = small_files;
-        hints = "archive_id=2";
+        action_params { archive_id = 2; }
         condition { last_mod >= 30min }
     }
 
     rule archive_std {
         target_fileclass = std_files;
         target_fileclass = big_files;
-        hints = "archive_id=1";
+        action_params { archive_id = 1; }
         condition { last_mod >= 30min }
     }
 
     # fallback rule
     rule default {
-        hints = "archive_id=3";
+        action_params { archive_id = 3; }
         condition { last_mod >= 30min }
     }
 }
