--- a/src/common/Makefile.am
+++ b/src/common/Makefile.am
@@ -12,9 +12,9 @@ if SHOOK
 PURPOSE_SRC=shook_wrap.c
 endif
 
-libcommontools_la_SOURCES= RW_Lock.c uidgidcache.c rbh_misc.c \
-                           global_config.c update_params.c queue.c \
-                           rbh_logs.c rbh_modules.c rbh_params.c \
+libcommontools_la_SOURCES= RW_Lock.c uidgidcache.c rbh_misc.c rbh_params.c \
+                           param_utils.c  global_config.c update_params.c \
+                           queue.c rbh_logs.c rbh_modules.c \
                            $(FS_SRC) $(PURPOSE_SRC) $(COMPAT_SRC)
 
 indent:
