zlib is required to build backup module.
Change-Id: I1e2515fa37c944dcb54ace74e79fe2421ae02633

--- a/src/backend_ext/Makefile.am
+++ b/src/backend_ext/Makefile.am
@@ -3,6 +3,8 @@ AM_CFLAGS= $(CC_OPT) $(DB_CFLAGS) $(PURPOSE_CFLAGS)
 noinst_LTLIBRARIES=libbackend_ext.la
 
 libbackend_ext_la_SOURCES=backend_loader.c backend_basic.c
+libbackend_ext_la_LIBADD=-lz
+
 
 indent:
 	$(top_srcdir)/scripts/indent.sh
