tests: adapting test suite for action_params.
Change-Id: If2c7c354485789ef37032cc16c0a9578aede5573

--- a/tests/lustre_fs/cfg/test2.conf
+++ b/tests/lustre_fs/cfg/test2.conf
@@ -20,7 +20,7 @@ migration_rules
             and
             name == "*[1-5]"
         }
-        hints="archive_id=1";
+        action_params { archive_id=1; }
     }
 }
 
