--- a/tests/lustre_fs/cfg/test_maintenance.conf
+++ b/tests/lustre_fs/cfg/test_maintenance.conf
@@ -2,7 +2,7 @@
 # vim:expandtab:shiftwidth=4:tabstop=4:
 
 # TEST: - Fileset definition based on filename
-#       - Migration hints
+#       - Migration params
 #       - Migration policy using filesets
 
 %include "common.conf"
@@ -11,7 +11,7 @@
 
 migration_rules
 {
-    policy default
+    rule default
     {
         condition { last_mod > 30s }
     }
