--- a/tests/lustre_fs/cfg/test_path.conf
+++ b/tests/lustre_fs/cfg/test_path.conf
@@ -2,7 +2,7 @@
 # vim:expandtab:shiftwidth=4:tabstop=4:
 
 # TEST: - Fileset definition based on xattrs
-#       - Migration hints
+#       - Migration params
 #       - Migration policies using Filesets
 
 %include "common.conf"
@@ -67,7 +67,7 @@ Filesets
 
 migration_rules
 {
-    policy all
+    rule all
     {
 	target_fileclass = absolute_path;
 	target_fileclass = absolute_tree;
@@ -81,14 +81,14 @@ migration_rules
 	target_fileclass = any_level_path;
 
 	condition { last_mod > 1s }
-        migration_hints="{fileclass}";
+    action_params {class = "{fileclass}";}
     }
 
     # migrate even files 15s after they have been modified
-    policy default
+    rule default
     {
         condition { last_mod > 1s }
-        migration_hints="unmatched";
+        action_params {class = "unmatched";}
     }
 }
 
