--- a/tests/lustre_fs/cfg/test_pools.conf
+++ b/tests/lustre_fs/cfg/test_pools.conf
@@ -2,7 +2,7 @@
 # vim:expandtab:shiftwidth=4:tabstop=4:
 
 # TEST: - Fileset definition based on xattrs
-#       - Migration hints
+#       - Migration params
 #       - Migration policies using Filesets
 
 %include "common.conf"
@@ -22,13 +22,13 @@ Filesets
 
 Purge_rules
 {
-    Policy PoolFiles
+    rule PoolFiles
     {
         target_fileclass = pool_1;
         target_fileclass = pool_2;
         condition { last_access > 5s }
     }
-    Policy default
+    rule default
     {
         condition { last_access > 5s }
     }
@@ -41,13 +41,13 @@ db_update_params
 
 Migration_rules
 {
-    Policy PoolFiles
+    rule PoolFiles
     {
         target_fileclass = pool_1;
         target_fileclass = pool_2;
         condition { last_mod > 5s }
     }
-    Policy default
+    rule default
     {
         condition { last_mod > 5s }
     }
