--- a/tests/lustre_fs/cfg/test_trig2.conf
+++ b/tests/lustre_fs/cfg/test_trig2.conf
@@ -9,19 +9,19 @@
 
 migration_rules
 {
-    policy default
+    rule default
     {
         condition
         {
             last_mod >= 0
         }
-        hints="archive_id=1";
+        action_params { archive_id = 1; }
     }
 }
 
 purge_rules
 {
-    policy default
+    rule default
     {
         condition
         {
