--- a/tests/lustre_fs/cfg/test_xattr.conf
+++ b/tests/lustre_fs/cfg/test_xattr.conf
@@ -2,7 +2,7 @@
 # vim:expandtab:shiftwidth=4:tabstop=4:
 
 # TEST: - Fileset definition based on xattrs
-#       - Migration hints
+#       - Migration params
 #       - Migration policies using Filesets
 
 %include "common.conf"
@@ -16,7 +16,7 @@ Filesets
                         # xattr foo is set
                         xattr.user.foo != ""
                 }
-                migration_hints="fileclass={fileclass},archive_id=1";
+                migration_action_params { archive_id = 1; }
         }
 
         FileClass xattr_bar
@@ -26,7 +26,7 @@ Filesets
                         # xattr bar is set
                         xattr.user.bar != ""
                 }
-                migration_hints="fileclass={fileclass},archive_id=2";
+                migration_action_params { archive_id = 2; }
         }
 }
 
@@ -35,24 +35,26 @@ Filesets
 
 migration_rules
 {
-    policy xattr_foo_policy
+    rule xattr_foo_policy
     {
 	 target_fileclass = xattr_foo;
 	 condition { last_mod > 5s }
+     migration_action_params { class = "{fileclass}"; }
     }
 
-    policy xattr_bar_policy
+    rule xattr_bar_policy
     {
 	 target_fileclass = xattr_bar;
 	 condition { last_mod > 5s }
+     migration_action_params { class = "{fileclass}"; }
     }
 
     # migrate even files 15s after they have been modified
-    policy default
+    rule default
     {
         condition {
                 last_mod > 5s
         }
-        hints="archive_id=3";
+        action_params {archive_id = 3;}
     }
 }
