--- a/tests/lustre_fs/cfg/test1.conf
+++ b/tests/lustre_fs/cfg/test1.conf
@@ -1,7 +1,7 @@
 # -*- mode: c; c-basic-offset: 4; indent-tabs-mode: nil; -*-
 # vim:expandtab:shiftwidth=4:tabstop=4:
 
-# TEST: basic migration policy based on last_mod
+# TEST: basic migration rule based on last_mod
 
 %include "common.conf"
 
@@ -9,24 +9,21 @@
 
 migration_rules
 {
-    policy default
+    rule default
     {
         # Archive 'dirty' files that have not been modified
         # for more than 6 hours, or backup them daily
         # if they are continuously appended.
-        condition
-        {
-            last_mod > 10sec
-        }
-        hints="archive_id=1";
+        condition { last_mod > 10sec }
+        action_params { archive_id=1; }
     }
 }
 
-######## most basic space release policy ##########
+######## most basic space release rule ##########
 
 purge_rules
 {
-    policy default
+    rule default
     {
         # We can release files that have not been accessed
         # for more than a day
@@ -48,7 +45,7 @@ purge_trigger
     check_interval     = 5min ;
 }
 
-##### basic HSM remove policy ######
+##### basic HSM remove rule ######
 
 hsm_remove_policy
 {
