--- a/tests/lustre_fs/cfg/test3.conf
+++ b/tests/lustre_fs/cfg/test3.conf
@@ -2,8 +2,8 @@
 # vim:expandtab:shiftwidth=4:tabstop=4:
 
 # TEST: - Fileset definition based on filename
-#       - Migration hints
-#       - Migration policy using filesets
+#       - Migration action params
+#       - Migration rule using filesets
 
 %include "common.conf"
 
@@ -11,20 +11,26 @@ Filesets
 {
         FileClass even_files
         {
-                Definition
+                definition
                 {
                         name == "*[02468]"
                 }
-                migration_hints="fileclass={policy},archive_id=1";
+                migration_action_params {
+                    case = "{rule}";
+                    archive_id = 1;
+                }
         }
 
         FileClass odd_files
         {
-                Definition
+                definition
                 {
                         name == "*[13579]"
                 }
-                migration_hints="fileclass={policy},archive_id=1";
+                migration_action_params {
+                    case = "{rule}";
+                    archive_id = 1;
+                }
         }
 
 }
@@ -35,7 +41,7 @@ Filesets
 migration_rules
 {
     # migrate even files 10s after they have been modified
-    policy even_migr
+    rule even_migr
     {
         target_fileclass = even_files;
         condition {
@@ -44,7 +50,7 @@ migration_rules
     }
 
     # migrate odd files 20s after they have been modified
-    policy odd_migr
+    rule odd_migr
     {
         target_fileclass = odd_files;
         condition {
@@ -53,21 +59,21 @@ migration_rules
     }
 
     # migrate other files after 30s
-    policy default
+    rule default
     {
         condition {
                 last_mod > 30s
         }
-        hints="archive_id=1";
+        action_params {archive_id = 1;}
     }
 
 }
 
-######## most basic space release policy ##########
+######## most basic space release rule ##########
 
 purge_rules
 {
-    policy default
+    rule default
     {
         # We can release files that have not been accessed
         # for more than a day
@@ -89,7 +95,7 @@ purge_trigger
     check_interval     = 5min ;
 }
 
-##### basic HSM remove policy ######
+##### basic HSM remove rule ######
 
 hsm_remove_policy
 {
