--- a/tests/lustre_fs/cfg/test_fileclass.conf
+++ b/tests/lustre_fs/cfg/test_fileclass.conf
@@ -2,7 +2,7 @@
 # vim:expandtab:shiftwidth=4:tabstop=4:
 
 # TEST: - Fileset definition based on filename
-#       - Migration hints
+#       - Migration params
 #       - Migration policy using filesets
 
 %include "common.conf"
@@ -12,47 +12,47 @@ Filesets
         FileClass even_files
         {
             Definition { name == "*[02468]" }
-            Migration_hints="fileclass={fileclass}";
+            migration_action_params {class="{fileclass}";}
             report = no;
         }
 
         FileClass odd_files
         {
             Definition { name == "*[13579]" }
-            Migration_hints="fileclass={fileclass}";
+            migration_action_params {class="{fileclass}";}
             report = no;
         }
 
         FileClass in_dir_A
         {
             definition { tree == "/mnt/lustre/dir_A" }
-            Migration_hints="fileclass={fileclass},archive_id=1";
+            migration_action_params {class="{fileclass}" ; archive_id=1;}
             report = no;
         }
 
         FileClass in_dir_B
         {
             definition { tree == "/mnt/lustre/dir_B" }
-            Migration_hints="fileclass={fileclass},archive_id=1";
+            migration_action_params {class="{fileclass}"; archive_id = 1; }
             report = no;
         }
 
         FileClass odd_or_A
         {
             definition { odd_files UNION in_dir_A }
-            Migration_hints="fileclass={fileclass},archive_id=1";
+            migration_action_params {class="{fileclass}"; archive_id = 1; }
         }
 
         FileClass even_and_B
         {
             definition { even_files INTER in_dir_B }
-            Migration_hints="fileclass={fileclass},archive_id=1";
+            migration_action_params {class="{fileclass}"; archive_id = 1; }
         }
 
         FileClass even_and_not_B
         {
             definition { even_files INTER NOT in_dir_B }
-            Migration_hints="fileclass={fileclass},archive_id=1";
+            migration_action_params {class="{fileclass}"; archive_id = 1; }
         }
 }
 
@@ -87,7 +87,7 @@ migration_rules
     policy default
     {
         condition { last_mod > 1s }
-        Migration_hints="unmatched,archive_id=1";
+        action_params {class = "unmatched"; archive_id=1;}
     }
 
 }
