tests: unit tests for action params.
Change-Id: Ic556a84d3a2053eb95a535c8172361e29f5f6b85

--- a/src/tests/Makefile.am
+++ b/src/tests/Makefile.am
@@ -1,8 +1,8 @@
 AM_CFLAGS= -static $(CC_OPT) $(DB_CFLAGS) $(PURPOSE_CFLAGS)
 AM_LDFLAGS= -lpthread -static
 
-check_PROGRAMS=create_nostripe test_forcestripe test_uidgidcache test_params
-TESTS=test_uidgidcache test_params
+check_PROGRAMS=create_nostripe test_forcestripe test_uidgidcache test_params test_confparam
+TESTS=test_uidgidcache test_params test_confparam
 
 noinst_PROGRAMS=$(check_PROGRAMS)
 
@@ -10,6 +10,7 @@ test_forcestripe_LDADD=$(DB_LDFLAGS) $(PURPOSE_LDFLAGS) $(FS_LDFLAGS)
 
 test_uidgidcache_SOURCES=test_uidgidcache.c ../common/uidgidcache.c ../common/RW_Lock.c
 test_params_SOURCES=test_params.c ../common/rbh_params.c
+test_confparam_SOURCES=test_confparam.c ../common/param_utils.c ../common/rbh_params.c
 
 indent:
 	$(top_srcdir)/scripts/indent.sh
