action_params: accurate messages when using variables out of context.
Completed test 107 to test various misusage of fs scan completion command.

Change-Id: Ic036b0d2c447fa755611e1eeb35bf307cba03dfd

--- a/tests/lustre_fs/cfg/test_completion.conf
+++ b/tests/lustre_fs/cfg/test_completion.conf
@@ -71,5 +71,5 @@ backup_config
 FS_Scan
 {
     Ignore { path == "/mnt/lustre/.lustre" }
-    completion_command = "../completion.sh {cfg} {fspath} out";
+    completion_command = $TEST_CMD;
 }
