Allow defining global action_params for a policy.
Can now define an 'action_params' block in <policy>_parameters.
This defines the default action parameters for the policy.
They can then be overriden in rules and fileclasses.

Change-Id: I1cb23f3988074d12f916f6cc9529086b6f96307e

--- a/doc/templates_v3/template.conf
+++ b/doc/templates_v3/template.conf
@@ -24,7 +24,7 @@ Filesets {
 
         FileClass odd_files {
             definition { type == file and name == "*[13579]" }
-            lhsm_archive_action_params { archive_id = 1; }
+            lhsm_archive_action_params { archive_id = 2; }
             report = no;
         }
 
@@ -46,6 +46,22 @@ Filesets {
 }
 
 #### Lustre/HSM archive configuration ####
+
+lhsm_archive_parameters {
+    nb_threads = 8;
+## archive 1000 files max at once
+#    max_action_count = 1000;
+#    max_action_volume = 1TB;
+
+    # suspend policy run if action error rate > 50% (after 100 errors)
+    suspend_error_pct = 50%;
+    suspend_error_min= 100;
+
+    # default action parameters
+    action_params {
+        archive_id = 1;
+    }
+}
 
 lhsm_archive_rules {
     ignore_fileclass = empty_files;
@@ -74,17 +90,6 @@ lhsm_archive_rules {
 lhsm_archive_trigger {
     trigger_on = periodic;
     check_interval = 5min;
-}
-
-lhsm_archive_parameters {
-    nb_threads = 8;
-## archive 1000 files max at once
-#    max_action_count = 1000;
-#    max_action_volume = 1TB;
-
-    # suspend policy run if action error rate > 50% (after 100 errors)
-    suspend_error_pct = 50%;
-    suspend_error_min= 100;
 }
 
 #### Lustre/HSM release configuration ####
